--- a/Big_HW_1_Ponomarev/HSE_Bank/HSE_Bank.csproj
+++ b/Big_HW_1_Ponomarev/HSE_Bank/HSE_Bank.csproj
@@ -8,11 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Application\" />
+      <Folder Include="Application\Commands\" />
+      <Folder Include="Application\Decorators\" />
       <Folder Include="Domain\Models\" />
       <Folder Include="Infrastructure\Exporters\" />
       <Folder Include="Infrastructure\Importers\" />
-      <Folder Include="Infrastructure\Repositories\" />
     </ItemGroup>
 
 </Project>
