Decorators and logging added... Almost...

--- a/Big_HW_1_Ponomarev/HSE_Bank/HSE_Bank.csproj
+++ b/Big_HW_1_Ponomarev/HSE_Bank/HSE_Bank.csproj
@@ -8,11 +8,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Application\Commands\" />
-      <Folder Include="Application\Decorators\" />
       <Folder Include="Domain\Models\" />
       <Folder Include="Infrastructure\Exporters\" />
       <Folder Include="Infrastructure\Importers\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.1.25080.5" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0-preview.1.25080.5" />
     </ItemGroup>
 
 </Project>
