--- a/Big_HW_2_Ponomarev/FileAnalysisService/Dockerfile
+++ b/Big_HW_2_Ponomarev/FileAnalysisService/Dockerfile
@@ -7,11 +7,11 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["FileAnalysisService/FileAnalysisService.csproj", "FileAnalysisService/"]
-RUN dotnet restore "FileAnalysisService/FileAnalysisService.csproj"
+COPY ["FileAnalysisService.csproj", "./"]
+RUN dotnet restore "./FileAnalysisService.csproj"
 COPY . .
-WORKDIR "/src/FileAnalysisService"
-RUN dotnet build "FileAnalysisService.csproj" -c $BUILD_CONFIGURATION -o /app/build
+# WORKDIR "/src/FileAnalysisService"
+RUN dotnet build "./FileAnalysisService.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
