--- a/Big_HW_2_Ponomarev/ApiGateway/ApiGateway.csproj
+++ b/Big_HW_2_Ponomarev/ApiGateway/ApiGateway.csproj
@@ -10,13 +10,20 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-preview.7.23375.9"/>
+        <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.5.0" />
+        <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.6.24" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" />
     </ItemGroup>
 
     <ItemGroup>
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Controllers\" />
     </ItemGroup>
 
 </Project>
