first version of notification added

--- a/Big_HW_3_Ponomarev/ApiGateway/appsettings.json
+++ b/Big_HW_3_Ponomarev/ApiGateway/appsettings.json
@@ -12,6 +12,17 @@
           }
         ]
       },
+      "ws-route": {
+        "ClusterId": "orders-cluster",
+        "Match": {
+          "Path": "/ws"
+        },
+        "SessionAffinity": {
+          "Enabled": true,
+          "Policy": "Cookie",
+          "AffinityKeyName": ".Yarp.Affinity"
+        }
+      },
       "accounts-route": {
         "ClusterId": "payments-cluster",
         "Match": {
@@ -28,8 +39,16 @@
       "orders-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://ordersservice:8080"
+            "Address": "http://ordersservice1:8080"
+          },
+          "destination2": {
+            "Address": "http://ordersservice2:8080"
           }
+        },
+        "SessionAffinity": {
+          "Enabled": true,
+          "Policy": "Cookie",
+          "AffinityKeyName": ".Yarp.Affinity"
         }
       },
       "payments-cluster": {
